Fixed horizontal scroll

--- a/src/app/usm-main-container/usm-main-container.component.css
+++ b/src/app/usm-main-container/usm-main-container.component.css
@@ -5,6 +5,6 @@
     left: 0;
     top: 0;
     z-index: -1;
-    background-color: #fff;
+    background-color: #fbfbfb;
     overflow: auto;
 }
